--- a/ProgettoPaleohistory.html
+++ b/ProgettoPaleohistory.html
@@ -1,1 +1,71 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="icon" href="./Assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="index.css">
+    <title>Progetto Paleohistory</title>
+    <!--favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+</head>
+<body>
+    <div class="safe-area spaced-column">
+    <nav>
+        <div class="logo"><a href="./Index.html">Classe 3IE-MD</a></div>
+        <input type="checkbox" class="toggler">
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
+            <a class="menu-item active" href="./Index.html">Home</a>
+            <a class="menu-item" href="./">About</a>
+            <a class="menu-item" href="./">Works</a>
+            <a class="menu-item" href="./">Contacts</a>
+        </div>
+    </nav>
+    <div class="content">
+        <div>
+            <img class="main-image" src="./assets/fondazione.jpg" alt="fondazione Dalmine">
+        </div>
+        <div>
+            <h2 class="title_index">Da dove nasce il progetto?</h2>
+            <p>
+                Il progetto Paleohistory nasce dall’esigenza di non perdere il bagaglio culturale della nostra scuola e mira a dare nuova vita e visibilità storica al prototipo dell’auto SAL-Esperia. In collaborazione con la Fondazione Dalmine, questo progetto si propone di far conoscere alle nuove generazioni dell'ITIS Paleocapa la grande storia dell’istituto, che nasce come industria automobilistica, la SAL Esperia, e rimane sul territorio di Bergamo fino al 1915, quando chiuse per problemi finanziari. Nonostante avesse prodotto vari modelli di automobili, le vendite non decollarono mai. <br>
+            </p>
+            <p>
+                Il focus del progetto durante l’anno scolastico 2024/2025 è sull’auto Esperia, un’auto da corsa progettata e realizzata proprio all’interno dell’istituto. Il gruppo di meccanica ha ricostruito graficamente il veicolo utilizzando il software Inventor, traducendo il lavoro in un modello 3D interattivo. Questo modello sarà caricato sul sito della scuola e reso accessibile tramite una camera immersiva, grazie al contributo del gruppo di informatica. Il progetto non solo valorizza l’eredità tecnica e industriale dell’auto, ma rende anche accessibili le fonti storiche che ne hanno ispirato la realizzazione.
+            </p>
+        </div>
+        <div>
+            <h2 class="title_index">Il progetto Paleohistory</h2>
+            <p>
+                Il contesto storico di riferimento del progetto risale alle origini dell’Istituto Tecnico Industriale.  La ricostruzione del periodo avviene tramite consultazione della ricca documentazione, custodita nell’archivio dell’Istituto Paleocapa, nonché presente nella rivista “Omnia: revue pratique de locomotion”. La storia dell’Esperia, che ha inizio nel 1849 con la fondazione della Scuola Serale di Disegno per operai a Bergamo, evidenzia un forte legame con lo sviluppo industriale della provincia bergamasca. Fin dal principio, l’istituto è stato un punto di riferimento per l’educazione tecnica, sostenuto dalla Società di incoraggiamento per l’Industria Manifatturiera, e ha contribuito all’evoluzione industriale locale. <br>
+            </p>
+            <p>   
+                In sintesi, questo progetto non solo celebra la tradizione storica e il contributo formativo dell’istituto, ma offre anche una piattaforma innovativa per studiare e usufruire del patrimonio industriale e scolastico, mettendo in risalto il percorso di evoluzione della tecnologia e dell’istruzione in un contesto industriale.
+            </p>
+        </div>
+        <div>
+            <h2 class="title_index">Fondazione Dalmine</h2>
+            <p>
+                La Fondazione Dalmine ETS è nata grazie all'iniziativa di TenarisDalmine con l’intento di promuovere la cultura industriale, raccontando la storia di una realtà siderurgica che da oltre un secolo è parte integrante del territorio e che oggi fa parte di una multinazionale, Tenaris.
+            </p>    
+                La Fondazione condivide con Tenaris – attraverso una visione che unisce l'impegno verso la comunità locale e un’ottica globale – i medesimi principi relativi alla cultura industriale: innovazione, competenze professionali, salute e sicurezza sul lavoro, etica aziendale, trasparenza, sostenibilità ambientale, energia e modelli di economia circolare.
+            <p>    
+                A partire dalla conservazione e valorizzazione dell’archivio storico dell’azienda, Fondazione Dalmine ETS sostiene attività di ricerca e studio nei settori della storia economica e aziendale, diffondendo i risultati attraverso mostre, eventi, seminari e percorsi formativi.
+            </p>   
+            <p>   
+                Questo progetto culturale guarda al futuro, rivolgendosi a un pubblico ampio e variegato per età, provenienza e interessi, tra cui famiglie, studenti, istituzioni educative, appassionati e specialisti.
+            </p>
+        </div>
+    </div>
+    <div class="footer">2025</div>
+</div>
+</body>
+</html>
