--- a/ProgettoPaleohistory.html
+++ b/ProgettoPaleohistory.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="icon" href="./Assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="index.css">
     <title>Progetto Paleohistory</title>
     <!--favicon-->
