--- a/ProgettoPaleohistory.html
+++ b/ProgettoPaleohistory.html
@@ -19,11 +19,11 @@
 <body>
     <div class="safe-area spaced-column">
     <nav>
-        <div class="logo"><a href="./Index.html">Classe 3IE-MD</a></div>
+        <div class="logo"><a href="./index.html">Classe 3IE-MD</a></div>
         <input type="checkbox" class="toggler">
         <div class="hamburger"><div></div></div>
         <div class="menu">
-            <a class="menu-item active" href="./Index.html">Home</a>
+            <a class="menu-item active" href="./index.html">Home</a>
             <a class="menu-item" href="./">About</a>
             <a class="menu-item" href="./">Works</a>
             <a class="menu-item" href="./">Contacts</a>
