--- a/ProgettoPaleohistory.html
+++ b/ProgettoPaleohistory.html
@@ -34,7 +34,7 @@
             <img class="main-image" src="./assets/fondazione.jpg" alt="fondazione Dalmine">
         </div>
         <div>
-            <h2 class="title_index">Da dove nasce il progetto?</h2>
+            <h2 class="title_index">Le origini del progetto</h2>
             <p>
                 Il progetto Paleohistory nasce dall’esigenza di non perdere il bagaglio culturale della nostra scuola e mira a dare nuova vita e visibilità storica al prototipo dell’auto SAL-Esperia. In collaborazione con la Fondazione Dalmine, questo progetto si propone di far conoscere alle nuove generazioni dell'ITIS Paleocapa la grande storia dell’istituto, che nasce come industria automobilistica, la SAL Esperia, e rimane sul territorio di Bergamo fino al 1915, quando chiuse per problemi finanziari. Nonostante avesse prodotto vari modelli di automobili, le vendite non decollarono mai. <br>
             </p>
