--- a/ProgettoPaleohistory.html
+++ b/ProgettoPaleohistory.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" href="./Assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="index.css">
     <title>Progetto Paleohistory</title>
@@ -31,7 +31,7 @@
     </nav>
     <div class="content">
         <div>
-            <img class="main-image" src="./assets/fondazione.jpg" alt="fondazione Dalmine">
+            <img class="main-image" src="./assets/targaesperia.jpg" alt="fondazione Dalmine">
         </div>
         <div>
             <h2 class="title_index">Le origini del progetto</h2>
