--- a/ProgettoPaleohistory.html
+++ b/ProgettoPaleohistory.html
@@ -31,7 +31,7 @@
     </nav>
     <div class="content">
         <div>
-            <img class="main-image" src="./assets/targaesperia.jpg" alt="fondazione Dalmine">
+            <img class="main-image" src="./assets/targaesperia.JPG" alt="fondazione Dalmine">
         </div>
         <div>
             <h2 class="title_index">Le origini del progetto</h2>
