--- a/autoEsperia.html
+++ b/autoEsperia.html
@@ -29,7 +29,7 @@
                  La S.A.L. nacque con l’intento di sviluppare e produrre automobili di qualità, destinate a un mercato che stava rapidamente evolvendo grazie alla crescente domanda di mezzi di trasporto motorizzati.
                   Nonostante non sia diventata un grande successo commerciale, l'auto Esperia ha comunque un posto di rilievo nella storia automobilistica italiana.</h4>
             </div>
-                <img class="main-image" src="Foto Auto Esperia Gara.png" alt="Photo of the esperia car">
+                <img class="main-image" src="./assets/Foto Auto Esperia Gara.png" alt="Photo of the esperia car">
             <div>
                 <h2>Componenti auto Esperia</h2>
                 <h4> testo dato da meccanici</h4>
@@ -38,9 +38,9 @@
                 
                 <img src="Foto Macchina Esperia PO.jpg" alt="Photo of a view">
                 <ul class="lista">
-                    <a href="./elemento1.html"><li>elemento1</li></a>
-                    <a href="./elemento2.html"><li>elemento2</li></a>
-                    <a href="./elemento3.html"><li>elemento3</li></a>
+                    <a href="./pagesAutoEsperia/elemento1.html"><li>elemento1</li></a>
+                    <a href="./pagesAutoEsperia/elemento2.html"><li>elemento2</li></a>
+                    <a href="./pagesAutoEsperia/elemento3.html"><li>elemento3</li></a>
                 </ul>
 
             </div>
