--- a/pagesAutoEsperia/elemento2.html
+++ b/pagesAutoEsperia/elemento2.html
@@ -1,58 +1,45 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="autoEsperia.css">
-        <title>auto esperia</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../elemento2.css">
+    <title>Auto Esperia</title>
 </head>
+
 <body>
-    <div class="safe-area spaced-column">
-        
-        <nav>
-            <div class="logo"><a href="./Index.html">Federico Mazzoleni</a></div>
-            <input type="checkbox" class="toggler">
-            <div class="hamburger"><div></div></div>
-            <div class="menu">
-                <a class="menu-item active" href="./autoEsperia.html">Home</a>
-                <a class="menu-item" href="./autoEsperia.html">About</a>
-                <a class="menu-item" href="./autoEsperia.html">About</a>                
-                <a class="menu-item" href="./autoEsperia.html">About</a>
-            </div>
-        </nav>
-
-        <div class="content">
-            <div class="testo-principale">
-                <h3>l'auto esperia</h3>
-               <h4> L'auto "Esperia" è stata un prodotto importante della Società Automobili Lombarda (S.A.L.), un'azienda che ha operato a Bergamo nel primo Novecento. 
-                 La S.A.L. nacque con l’intento di sviluppare e produrre automobili di qualità, destinate a un mercato che stava rapidamente evolvendo grazie alla crescente domanda di mezzi di trasporto motorizzati.
-                  Nonostante non sia diventata un grande successo commerciale, l'auto Esperia ha comunque un posto di rilievo nella storia automobilistica italiana.</h4>
-            </div>
-                <img class="main-image" src="Foto Auto Esperia Gara.png" alt="Photo of the esperia car">
-            <div>
-                <h2>componenti auto</h2>
-                <h4> vciaoiasdafuhfugdaiufgaigf</h4>
-            </div>
-            <div class="disegno-lista">
-                
-                <img src="Foto Macchina Esperia PO.jpg" alt="Photo of a view">
-                <ul class="lista">
-                    <a href="./elemento1.html"><li>elemento1</li></a>
-                    <a href="./elemento2.html"><li>elemento2</li></a>
-                    <a href="./elemento3.html"><li>elemento3</li></a>
-                </ul>
-
-            </div>
-
-            </div>
-
-        </div>
-
-        <div class="footer">2025</div>
-
-    </div>    
+    <div class="grid-container">
+        <div class="grid-item">Elemento 1 - Nome</div>
+        <div class="grid-item">Elemento 2 - Nome</div>
+        <div class="grid-item">Elemento 3 - Nome</div>
+        <div class="grid-item">Elemento 4 - Nome</div>
+        <div class="grid-item">Elemento 5 - Nome</div>
+        <div class="grid-item">Elemento 6 - Nome</div>
+        <div class="grid-item">Elemento 7 - Nome</div>
+        <div class="grid-item">Elemento 8 - Nome</div>
+        <div class="grid-item">Elemento 9 - Nome</div>
+        <div class="grid-item">Elemento 10 - Nome</div>
+        <div class="grid-item">Elemento 11 - Nome</div>
+        <div class="grid-item">Elemento 12 - Nome</div>
+        <div class="grid-item">Elemento 13 - Nome</div>
+        <div class="grid-item">Elemento 14 - Nome</div>
+        <div class="grid-item">Elemento 15 - Nome</div>
+        <div class="grid-item">Elemento 16 - Nome</div>
+        <div class="grid-item">Elemento 17 - Nome</div>
+        <div class="grid-item">Elemento 18 - Nome</div>
+        <div class="grid-item">Elemento 19 - Nome</div>
+        <div class="grid-item">Elemento 20 - Nome</div>
+        <div class="grid-item">Elemento 21 - Nome</div>
+        <div class="grid-item">Elemento 22 - Nome</div>
+        <div class="grid-item">Elemento 23 - Nome</div>
+        <div class="grid-item">Elemento 24 - Nome</div>
+        <div class="grid-item">Elemento 25 - Nome</div>
+        <div class="grid-item">Elemento 26 - Nome</div>
+    </div>
 </body>
+
 </html>
