Update and rename ProgettoPaleohistory.html to index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header class="hero">
         <div class="hero-content">
             <div class="logo">
-                <a href="./index.html">Classe 3IE-MD</a>
+                <a href="./index.html">ESPERIA</a>
             </div>
             <nav class="menu">
                 <a class="menu-item active" href="./index.html">Home</a>
@@ -70,7 +70,6 @@
                 </p>
             </div>
         </div>
-
         <footer class="footer">
             <div class="footer-content">
                 <p>&copy; 2025 Auto Esperia</p>
