--- a/Curiosità.html
+++ b/Curiosità.html
@@ -14,20 +14,22 @@
 <body>
   
     <div class="safe-area spaced-column">
-    <nav>
-        <div style="color: #2d186e" class="logo"><a href="../Index.html">Classe 3IE-3MD</a></div>
-        <input type="checkbox" class="toggler">
-        <div class="hamburger"><div></div></div>
-        <div class="menu">
-            <a style="color: #000000" sclass="menu-item" href="../index.html">Home</a>
-            <a style="color: #000000" class="menu-item" href="./About.html">Paleo History</a>
-            <a style="color: #000000" class="menu-item" href="./Works.html">Storia</a>
-            <a style="color: #000000" class="menu-item active" href="./Curiosità.html">Curiosità</a>
-        </div>
-    </nav>
-    <div class="image-column-right">
-        <img src="../Assets/giornale2.png" alt="Immagine Destra" class="image-3">
-    </div>
+        <header class="hero">
+            <div class="hero-content">
+                <div class="logo">
+                    <a href="./autoEsperia.html">Esperia</a>
+                </div>
+                <nav class="menu">
+                    <a class="menu-item" href="./">Home</a>
+                    <a class="menu-item" href="./">Storia</a>
+                    <a class="menu-item " href="./">Auto Esperia</a>
+                    <a class="menu-item active" href="./Curiosità.html">Curiosità</a>
+                </nav>
+            </div>
+        </header>
+
+
+
     <div class="content">
         <div class="title-block">
             <h1 style="font-family: 'EB Garamond', serif; color: #000000" >Curiosità</h1>
@@ -37,8 +39,8 @@
         <div class="content">
             <div class="row-salone">
                 <div class="image-column-right">
-                    <img src="../Assets/salone.png" alt="Immagine Sinistra" class="image-2">
-                    <img src="../Assets/macchinaES.jpg" alt="Immagine Sinistra" class="image-2">
+                    <img src="./AssetsZak/macchinaES.jpg" alt="Immagine Sinistra" class="image-2">
+                    <img src="./AssetsZak/salone.png" alt="Immagine Sinistra" class="image-2">
                 </div>
                 <div class="text-column-center">
                     <div class="titleblock-2">
@@ -101,6 +103,13 @@ La prova di Padova-Bovolenta del 1908 ha rappresentato quindi un momento fondame
         </div>
     </div>
 </div>
+
 </div>
+<footer class="footer">
+    <div class="footer-content">
+        <p>&copy; 2025 PaleoHistory</p>
+        <p class="footer-link"><a href="#">Privacy Policy</a></p>
+    </div>
+</footer>
 </body>
 </html>
