--- a/Curiosità.html
+++ b/Curiosità.html
@@ -39,8 +39,8 @@
         <div class="content">
             <div class="row-salone">
                 <div class="image-column-right">
-                    <img src="./AssetsZak/macchinaES.jpg" alt="Immagine Sinistra" class="image-2">
-                    <img src="./AssetsZak/salone.png" alt="Immagine Sinistra" class="image-2">
+                    <img src="./assets/macchinaES.jpg" alt="Immagine Sinistra" class="image-2">
+                    <img src="./assets/salone.png" alt="Immagine Sinistra" class="image-2">
                 </div>
                 <div class="text-column-center">
                     <div class="titleblock-2">
@@ -55,7 +55,7 @@
     <div class="content-2">
         <div class="row-2">
             <div class="image-column-left">
-                <img src="./AssetsZak/brescia.JPG" alt="Immagine Sinistra" class="image-2">
+                <img src="./assets/brescia.JPG" alt="Immagine Sinistra" class="image-2">
             </div>
             <div class="text-column-center">
                  <div class="titleblock-2">
@@ -78,7 +78,7 @@
        
         <div class="row-2">
             <div class="image-column-left">
-                <img src="./AssetsZak/Padova.jpg" alt="Immagine Sinistra" class="image-4">
+                <img src="./assets/Padova.jpg" alt="Immagine Sinistra" class="image-4">
             </div>
             <div class="text-column-center">
                  <div class="titleblock-2">
