--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
         <div class="content">
             <section>
-                <img class="main-image" src="./assets/Macchina_Esperia.png" alt="Immagine dell'auto Esperia - Progetto Paleohistory">
+                <img class="main-image" src="./assets/macchinaES.jpg" alt="Immagine dell'auto Esperia - Progetto Paleohistory">
             </section>
 
             <!-- Sezione 1: Le origini del progetto -->
