--- a/storia.html
+++ b/storia.html
@@ -80,12 +80,12 @@
                 class="img-right">
 
             <p style="line-height: 1.8;">
-                La S.A.L., inizialmente produttrice di omnibus e motori marini, trovò la sua identità nel <br> settore
-                automobilistico con il modello Esperia, un'auto innovativa e di alta qualità, pensata <br> per competere con
-                le grandi case automobilistiche internazionali. Nonostante le sue <br> prestazioni avanzate e il design
-                raffinato, l'azienda affrontò gravi difficoltà, tra cui la <br> concorrenza estera, la mancanza di capitali e
-                una rete di distribuzione limitata. La crisi economica e <br> la difficoltà nell'espandersi portarono infine
-                al declino e alla chiusura della S.A.L., nonostante <br> la validità dei suoi prodotti.
+                La S.A.L., inizialmente produttrice di omnibus e motori marini, trovò la sua identità nel settore
+                automobilistico con il modello Esperia, un'auto innovativa e di alta qualità, pensata per competere con
+                le grandi case automobilistiche internazionali. Nonostante le sue prestazioni avanzate e il design
+                raffinato, l'azienda affrontò gravi difficoltà, tra cui la concorrenza estera, la mancanza di capitali e
+                una rete di distribuzione limitata. La crisi economica e la difficoltà nell'espandersi portarono infine
+                al declino e alla chiusura della S.A.L., nonostante la validità dei suoi prodotti.
             </p>
             <img src="./assets/Foto Macchina Esperia PO.jpg"
                 class="img-right">
