--- a/auto_esperia.html
+++ b/auto_esperia.html
@@ -57,7 +57,12 @@
 
             <section class="componenti-esperia">
                 <h2>Componenti auto Esperia</h2>
-                <p>Testo tecnico fornito dai meccanici che descrive i vari componenti dell'auto.</p>
+                <p>La trasmissione dell’auto è uno degli aspetti meccanici più fondamentali che permette al veicolo
+                    di muoversi in avanti e indietro.Coinvolgendo diversi organi che hanno lo scopo di trasferire
+                    la potenza generata dal motore alle ruote motrici. Questo sistema è ciò che permette al veicolo
+                    di mettersi in movimento e di adattarsi a diverse situazioni stradali. In questo tipo di 
+                    sistema, il guidatore è responsabile di selezionare manualmente le marce attraverso il cambio,
+                    che regola il rapporto di trasmissione tra il motore e le ruote.</p>
 
                 <div class="disegno-lista">
                     <img src="./assets/Foto Macchina Esperia PO.jpg" alt="View of the car" class="main-img">
