--- a/auto_esperia.html
+++ b/auto_esperia.html
@@ -68,7 +68,7 @@
                     <img src="./assets/Foto Macchina Esperia PO.jpg" alt="View of the car" class="main-img">
                     <ul class="lista">
                         <li>
-                            <a href="./pagesAutoEsperia/elemento1.html" class="list-item">
+                            <a href="./elementiMacchina.html" class="list-item">
                                 <img src="./assets/icona_auto.png" alt="Automobile Icon" class="icon">
                                 <span>Elementi automobile</span>
                             </a>
@@ -76,7 +76,7 @@
                                 dell'estetica dell'auto Esperia.</p>
                         </li>
                         <li>
-                            <a href="./pagesAutoEsperia/elemento2.html" class="list-item">
+                            <a href="./elementiMotore.html" class="list-item">
                                 <img src="./assets/icona_motore.jfif" alt="Motor Icon" class="icon">
                                 <span>Elementi trasmissione</span>
                             </a>
