--- a/storia.html
+++ b/storia.html
@@ -1,151 +1,169 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Storia di Esperia</title>
+
+    <!-- Collegamenti ai font e CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-        <link rel="stylesheet" href="final_style.css">
-            <!-- Favicon links -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="final_style.css">
+
+    <!-- Favicon -->
     <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
     <link rel="manifest" href="./favicon/site.webmanifest">
 
-    <title>Storia</title>
     <style>
-        /* Aggiungi il bordo arrotondato grigio chiaro per il testo */
+        /* Stile migliorato per la leggibilità */
         .text-box {
             background-color: #f0f0f0;
-            /* Colore di sfondo grigio chiaro */
             padding: 15px;
             border-radius: 8px;
             margin-bottom: 20px;
+        }
+
+        /* Link di salto per migliorare la navigazione da tastiera */
+        .skip-link {
+            position: absolute;
+            top: -40px;
+            left: 10px;
+            background: #000;
+            color: white;
+            padding: 8px;
+            z-index: 100;
+        }
+
+        .skip-link:focus {
+            top: 10px;
         }
     </style>
 </head>
 
 <body>
-    <div class="safe-area spaced-column">
+    <!-- Link per saltare direttamente al contenuto principale -->
+    <a href="#contenuto" class="skip-link">Salta al contenuto</a>
 
-        <header class="hero">
+    <div class="safe-area spaced-column">
+        <header class="hero" role="banner">
             <div class="hero-content">
                 <div class="logo">
                     <a href="./home.html">Esperia</a>
                 </div>
-                <nav class="menu">
+                <nav class="menu" role="navigation" aria-label="Menu principale">
                     <a class="menu-item" href="./home.html">Home</a>
-                    <a class="menu-item active" href="./storia.html">Storia</a>
+                    <a class="menu-item active" href="./storia.html" aria-current="page">Storia</a>
                     <a class="menu-item" href="./auto_esperia.html">Auto Esperia</a>
                     <a class="menu-item" href="./curiosità.html">Curiosità</a>
                 </nav>
             </div>
         </header>
 
+        <main id="contenuto" role="main">
+            <section>
+                <h1 style="color: #925b52;"><b>La storia dell'Esperia</b></h1>
+            </section>
 
-        <div>
-            <h1 style="color: #925b52;"><b> La storia dell'Esperia</b></h1>
-        </div>
-        <div class="centrato">
-            <h2 style="color: #343d90;"><b> L'Esperia: simbolo dell'ambizione industriale italiana e delle difficoltà
-                    del settore
-                    Automobilistico</b></h2>
-        </div>
-        <div class="content text-box">
-            <p style="line-height: 1.8;">
-                L'Esperia non fu solo un’automobile, ma un simbolo dell’ambizione industriale italiana agli inizi del
-                Novecento. In un’epoca di grande sviluppo tecnologico, la Società Automobili Lombarda (S.A.L.), fondata
-                nel 1905 a Bergamo, cercò di affermarsi nel settore automobilistico con un marchio che puntava su
-                qualità, affidabilità e innovazione. Tuttavia, il mercato era dominato da case straniere più esperte, e
-                l’industria italiana doveva affrontare sfide economiche e tecniche significative. Nonostante gli
-                investimenti in ricerca e sviluppo e l’attenzione alla qualità, la S.A.L. incontrò difficoltà nel
-                crescere in un contesto altamente competitivo. L’Esperia rappresentò comunque il tentativo di affermare
-                il progresso industriale italiano, anticipando il futuro sviluppo del settore automobilistico nel Paese.
-                La S.A.L., inizialmente produttrice di omnibus e motori marini, trovò la sua identità nel settore
-                automobilistico con il modello Esperia, un'auto innovativa e di alta qualità, pensata per competere con
-                le grandi case automobilistiche internazionali. Nonostante le sue prestazioni avanzate e il design
-                raffinato, l'azienda affrontò gravi difficoltà, tra cui la concorrenza estera, la mancanza di capitali e
-                una rete di distribuzione limitata. La crisi economica e la difficoltà nell'espandersi portarono infine
-                al declino e alla chiusura della S.A.L., nonostante la validità dei suoi prodotti.
-            </p>
-        </div>
-        <div>
-        </div>
-        <div class="content-second text-box">
-            <img src="./assets/tesserino2.jpg"
-                class="img-right">
+            <section class="centrato">
+                <h2 style="color: #343d90;"><b>L'Esperia: simbolo dell'ambizione industriale italiana e delle difficoltà del settore automobilistico</b></h2>
+            </section>
 
-            <p style="line-height: 1.8;">
-                La S.A.L., inizialmente produttrice di omnibus e motori marini, trovò la sua identità nel settore
-                automobilistico con il modello Esperia, un'auto innovativa e di alta qualità, pensata per competere con
-                le grandi case automobilistiche internazionali. Nonostante le sue prestazioni avanzate e il design
-                raffinato, l'azienda affrontò gravi difficoltà, tra cui la concorrenza estera, la mancanza di capitali e
-                una rete di distribuzione limitata. La crisi economica e la difficoltà nell'espandersi portarono infine
-                al declino e alla chiusura della S.A.L., nonostante la validità dei suoi prodotti.
-            </p>
-            <img src="./assets/Foto Macchina Esperia PO.jpg"
-                class="img-right">
-        </div>
-        <div class="centrato">
-            <h2 style="color: #23164d;"><b>La S.A.L.: dal declino industriale alla rinascita attraverso la formazione
-                    tecnica</b></h2>
-        </div>
-        <div class="content-second text-box">
-            <img src="./assets/fabbrica.png"
-                class="img-right">
-            <p style="line-height: 1.8;">
-                Nel 1909, a causa di difficoltà economiche e di mercato, la S.A.L. fu costretta a liquidarsi e venne
-                acquisita dall’imprenditore Giovanni Macagno. Sotto la sua guida, l’azienda cercò di rilanciarsi con
-                nuovi modelli di automobili, come il 20/24 HP e il 40/50 HP, che si distinguevano per soluzioni tecniche
-                avanzate come i motori monoblocco e la trasmissione cardanica. Nonostante gli sforzi per modernizzare la
-                produzione e competere con le case automobilistiche più affermate, il rilancio non ebbe successo a causa
-                della forte concorrenza, dell’instabilità economica e delle difficoltà legate allo sviluppo di
-                un'industria automobilistica giovane in Italia. Nel 1913, la S.A.L. chiuse definitivamente.
+            <section class="content text-box">
+                <p style="line-height: 1.8; text-align: justify;">
+                    L'Esperia non fu solo un’automobile, ma un simbolo dell’ambizione industriale italiana agli inizi del
+                    Novecento. In un’epoca di grande sviluppo tecnologico, la Società Automobili Lombarda (S.A.L.), fondata
+                    nel 1905 a Bergamo, cercò di affermarsi nel settore automobilistico con un marchio che puntava su
+                    qualità, affidabilità e innovazione. Tuttavia, il mercato era dominato da case straniere più esperte, e
+                    l’industria italiana doveva affrontare sfide economiche e tecniche significative. Nonostante gli
+                    investimenti in ricerca e sviluppo e l’attenzione alla qualità, la S.A.L. incontrò difficoltà nel
+                    crescere in un contesto altamente competitivo. L’Esperia rappresentò comunque il tentativo di affermare
+                    il progresso industriale italiano, anticipando il futuro sviluppo del settore automobilistico nel Paese.
+                    La S.A.L., inizialmente produttrice di omnibus e motori marini, trovò la sua identità nel settore
+                    automobilistico con il modello Esperia, un'auto innovativa e di alta qualità, pensata per competere con
+                    le grandi case automobilistiche internazionali. Nonostante le sue prestazioni avanzate e il design
+                    raffinato, l'azienda affrontò gravi difficoltà, tra cui la concorrenza estera, la mancanza di capitali e
+                    una rete di distribuzione limitata. La crisi economica e la difficoltà nell'espandersi portarono infine
+                    al declino e alla chiusura della S.A.L., nonostante la validità dei suoi prodotti.               
+                 </p>
+            </section>
 
-                Tuttavia, la sua eredità non svanì. L’area industriale un tempo occupata dalla fabbrica fu trasformata
-                in un importante istituto educativo: l'Istituto Tecnico Industriale Pietro Paleocapa (ITIS). Questa
-                scelta, oltre a onorare la tradizione manifatturiera di Bergamo, rappresentò un segno di continuità con
-                il passato industriale, puntando sulla formazione tecnica delle future generazioni. L’ITIS divenne un
-                punto di riferimento per la preparazione di tecnici e ingegneri, con percorsi di studio che riflettevano
-                le attività industriali legate alla S.A.L. Il nome Esperia, scelto per l'istituto, non fu solo un
-                omaggio al marchio automobilistico scomparso, ma un simbolo di una tradizione industriale che, pur
-                cambiando forma, non si era mai spenta, continuando a ispirare e a contribuire allo sviluppo tecnologico
-                e culturale della città.
-            </p>
-        </div>
-        <div class="centrato">
-            <h2 style="color: #2d286e;"><b>Esperia: un simbolo di progresso e tradizione a Bergamo</b></h2>
-        </div>
-        <div class="content text-box">
-            <p style="line-height: 1.8;">
-                Ancora oggi, l’Istituto "Pietro Paleocapa" rappresenta un'eccellenza nel settore della formazione
-                tecnica, preparando ogni anno centinaia di studenti a inserirsi nel mondo del lavoro con competenze
-                avanzate e una solida preparazione tecnologica. Questo legame tra industria e istruzione, tra passato e
-                presente, dimostra come la storia di un'azienda possa sopravvivere e trasformarsi, diventando parte
-                integrante della cultura e dello sviluppo di una comunità. Così, anche se la produzione della S.A.L. e
-                delle sue automobili si è interrotta oltre un secolo fa, il suo spirito innovativo continua a vivere
-                attraverso la formazione delle nuove generazioni, testimoniando il valore della memoria industriale come
-                elemento fondante della crescita e del progresso.
-            </p>
-        </div>
-        <div class="content-second text-box">
-            <img src="./assets/museo.jpg"
-                class="img-left">
-            <p style="line-height: 1.8;">
-                Il nome "Esperia" ha acquisito un significato più ampio rispetto all'istituto tecnico originario,
-                diventando un simbolo di progresso, innovazione e legame tra tradizione e modernità a Bergamo. La sua
-                eredità si è trasformata in un patrimonio vivo, che continua a ispirare nuove generazioni e a alimentare
-                lo sviluppo tecnologico. Non è solo un ricordo del passato, ma un esempio di come l'eccellenza tecnica
-                possa plasmare il futuro, promuovendo la formazione, la ricerca e l'innovazione. Il nome "Esperia"
-                rappresenta un ponte tra epoche diverse, riflettendo l'ambizione di costruire un futuro di progresso e
-                eccellenza.
-            </p>
-        </div>
-        <footer class="footer">
+            <section class="content-second text-box">
+                <img src="./assets/tesserino2.jpg" class="img-right" alt="L'immagine rappresenta un cartello della S.A.L.">
+                <p style="line-height: 1.8;text-align: justify;">
+                    La S.A.L., inizialmente produttrice di omnibus e motori marini, trovò la sua identità nel settore
+                    automobilistico con il modello Esperia, un'auto innovativa e di alta qualità, pensata per competere con
+                    le grandi case automobilistiche internazionali. Nonostante le sue prestazioni avanzate e il design
+                    raffinato, l'azienda affrontò gravi difficoltà, tra cui la concorrenza estera, la mancanza di capitali e
+                    una rete di distribuzione limitata. La crisi economica e la difficoltà nell'espandersi portarono infine
+                    al declino e alla chiusura della S.A.L., nonostante la validità dei suoi prodotti.
+                                </p>
+                <img src="./assets/Foto Macchina Esperia PO.jpg" class="img-right" alt="L'immagine rappresenta un modello della macchina Esperia">
+            </section>
+
+            <section class="centrato">
+                <h2 style="color: #23164d;"><b>La S.A.L.: dal declino industriale alla rinascita attraverso la formazione tecnica</b></h2>
+            </section>
+
+            <section class="content-second text-box">
+                <img src="./assets/fabbrica.png" class="img-right" alt="L'immagine rappresenta la fabbrica Esperia quando ancora era in attività">
+                <p style="line-height: 1.8; text-align: justify;">
+                    Nel 1909, a causa di difficoltà economiche e di mercato, la S.A.L. fu costretta a liquidarsi e venne
+                    acquisita dall’imprenditore Giovanni Macagno. Sotto la sua guida, l’azienda cercò di rilanciarsi con
+                    nuovi modelli di automobili, come il 20/24 HP e il 40/50 HP, che si distinguevano per soluzioni tecniche
+                    avanzate come i motori monoblocco e la trasmissione cardanica. Nonostante gli sforzi per modernizzare la
+                    produzione e competere con le case automobilistiche più affermate, il rilancio non ebbe successo a causa
+                    della forte concorrenza, dell’instabilità economica e delle difficoltà legate allo sviluppo di
+                    un'industria automobilistica giovane in Italia. Nel 1913, la S.A.L. chiuse definitivamente.
+    
+                    Tuttavia, la sua eredità non svanì. L’area industriale un tempo occupata dalla fabbrica fu trasformata
+                    in un importante istituto educativo: l'Istituto Tecnico Industriale Pietro Paleocapa (ITIS). Questa
+                    scelta, oltre a onorare la tradizione manifatturiera di Bergamo, rappresentò un segno di continuità con
+                    il passato industriale, puntando sulla formazione tecnica delle future generazioni. L’ITIS divenne un
+                    punto di riferimento per la preparazione di tecnici e ingegneri, con percorsi di studio che riflettevano
+                    le attività industriali legate alla S.A.L. Il nome Esperia, scelto per l'istituto, non fu solo un
+                    omaggio al marchio automobilistico scomparso, ma un simbolo di una tradizione industriale che, pur
+                    cambiando forma, non si era mai spenta, continuando a ispirare e a contribuire allo sviluppo tecnologico
+                    e culturale della città.
+                </p>
+            </section>
+
+            <section class="centrato">
+                <h2 style="color: #2d286e;"><b>Esperia: un simbolo di progresso e tradizione a Bergamo</b></h2>
+            </section>
+
+            <section class="content text-box">
+                <p style="line-height: 1.8; text-align: justify;">
+                    Ancora oggi, l’Istituto "Pietro Paleocapa" rappresenta un'eccellenza nel settore della formazione
+                    tecnica, preparando ogni anno centinaia di studenti a inserirsi nel mondo del lavoro con competenze
+                    avanzate e una solida preparazione tecnologica. Questo legame tra industria e istruzione, tra passato e
+                    presente, dimostra come la storia di un'azienda possa sopravvivere e trasformarsi, diventando parte
+                    integrante della cultura e dello sviluppo di una comunità. Così, anche se la produzione della S.A.L. e
+                    delle sue automobili si è interrotta oltre un secolo fa, il suo spirito innovativo continua a vivere
+                    attraverso la formazione delle nuove generazioni, testimoniando il valore della memoria industriale come
+                    elemento fondante della crescita e del progresso.
+                                </p>
+            </section>
+
+            <section class="content-second text-box">
+                <img src="./assets/museo.jpg" class="img-left" alt="L'immagine rappresenta il museo Time della scuola Pietro Paleocapa">
+                <p style="line-height: 1.8; text-align: justify;">
+                    Il nome "Esperia" ha acquisito un significato più ampio rispetto all'istituto tecnico originario,
+                    diventando un simbolo di progresso, innovazione e legame tra tradizione e modernità a Bergamo. La sua
+                    eredità si è trasformata in un patrimonio vivo, che continua a ispirare nuove generazioni e a alimentare
+                    lo sviluppo tecnologico. Non è solo un ricordo del passato, ma un esempio di come l'eccellenza tecnica
+                    possa plasmare il futuro, promuovendo la formazione, la ricerca e l'innovazione. Il nome "Esperia"
+                    rappresenta un ponte tra epoche diverse, riflettendo l'ambizione di costruire un futuro di progresso e
+                    eccellenza.
+                                </p>
+            </section>
+        </main>
+
+        <footer class="footer" role="contentinfo">
             <div class="footer-content">
                 <p>&copy; 2025 Auto Esperia</p>
                 <p class="footer-link"><a href="#">Privacy Policy</a></p>
