--- a/storia.html
+++ b/storia.html
@@ -129,30 +129,23 @@
             <section class="centrato">
                 <h2 style="color: #2d286e;"><b>Esperia: un simbolo di progresso e tradizione a Bergamo</b></h2>
             </section>
-
-            <section class="content text-box">
-                <p style="line-height: 1.8; text-align: justify;">
-                    Ancora oggi, l’Istituto "Pietro Paleocapa" rappresenta un'eccellenza nel settore della formazione
-                    tecnica, preparando ogni anno centinaia di studenti a inserirsi nel mondo del lavoro con competenze
-                    avanzate e una solida preparazione tecnologica. Questo legame tra industria e istruzione, tra passato e
-                    presente, dimostra come la storia di un'azienda possa sopravvivere e trasformarsi, diventando parte
-                    integrante della cultura e dello sviluppo di una comunità. Così, anche se la produzione della S.A.L. e
-                    delle sue automobili si è interrotta oltre un secolo fa, il suo spirito innovativo continua a vivere
-                    attraverso la formazione delle nuove generazioni, testimoniando il valore della memoria industriale come
-                    elemento fondante della crescita e del progresso.
-                                </p>
-            </section>
-
             <section class="content-second text-box">
                 <img src="./assets/museo.jpg" class="img-left" alt="L'immagine rappresenta il museo Time della scuola Pietro Paleocapa">
                 <p style="line-height: 1.8; text-align: justify;">
-                    Il nome "Esperia" ha acquisito un significato più ampio rispetto all'istituto tecnico originario,
-                    diventando un simbolo di progresso, innovazione e legame tra tradizione e modernità a Bergamo. La sua
-                    eredità si è trasformata in un patrimonio vivo, che continua a ispirare nuove generazioni e a alimentare
-                    lo sviluppo tecnologico. Non è solo un ricordo del passato, ma un esempio di come l'eccellenza tecnica
-                    possa plasmare il futuro, promuovendo la formazione, la ricerca e l'innovazione. Il nome "Esperia"
-                    rappresenta un ponte tra epoche diverse, riflettendo l'ambizione di costruire un futuro di progresso e
-                    eccellenza.
+             L'Istituto "Pietro Paleocapa" continua oggi a rappresentare un'eccellenza nel settore della formazione
+                tecnica, preparando ogni anno centinaia di studenti ad affrontare il mondo del lavoro con competenze
+                avanzate e una solida preparazione tecnologica. Questo legame tra industria e istruzione, tra passato e
+                presente, dimostra come la storia di un'azienda possa trasformarsi e diventare parte integrante della
+                cultura e dello sviluppo di una comunità. Sebbene la produzione della S.A.L. e delle sue automobili si
+                sia interrotta oltre un secolo fa, il suo spirito innovativo continua a vivere attraverso la formazione
+                delle nuove generazioni, testimoniando il valore della memoria industriale come elemento fondante della
+                crescita e del progresso.
+                Il nome "Esperia", originariamente associato all'istituto tecnico, ha acquisito un significato più
+                ampio, diventando un simbolo di progresso, innovazione e connessione tra tradizione e modernità a
+                Bergamo. La sua eredità è oggi un patrimonio vivo che ispira e alimenta lo sviluppo tecnologico. Non è
+                solo un ricordo del passato, ma un esempio di come l'eccellenza tecnica possa plasmare il futuro,
+                promuovendo formazione, ricerca e innovazione. "Esperia" rappresenta un ponte tra epoche diverse,
+                riflettendo l'ambizione di costruire un futuro di progresso e di eccellenza.
                                 </p>
             </section>
         </main>
