--- a/storia.html
+++ b/storia.html
@@ -74,7 +74,7 @@
             </section>
             <section class="content-second text-box">
                 <img src="./assets/tesserino2.jpg" class="img-right" alt="L'immagine rappresenta un cartello della S.A.L.">
-                <p style="line-height: 1.8;text-align: justify;">
+                <p style="line-height: 1.8;text-align: justify;margin-right:20px">
                     La S.A.L., inizialmente produttrice di omnibus e motori marini, trovò la sua identità nel settore
                     automobilistico con il modello Esperia, un'auto innovativa e di alta qualità, pensata per competere con
                     le grandi case automobilistiche internazionali. Nonostante le sue prestazioni avanzate e il design
