--- a/auto_esperia.html
+++ b/auto_esperia.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="final_style.css">
-        <!-- Favicon links -->
-        <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-        <link rel="manifest" href="./favicon/site.webmanifest">    
+    <!-- Favicon links -->
+    <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
 
     <title>Auto Esperia</title>
 </head>
@@ -30,7 +30,8 @@
                     <a class="menu-item" href="./home.html">Home</a>
                     <a class="menu-item" href="./storia.html">Storia</a>
                     <a class="menu-item active" href="./auto_esperia.html">Auto Esperia</a>
-                    <a class="menu-item" href="./curiosità.html">Curiosità</a>                </nav>
+                    <a class="menu-item" href="./curiosità.html">Curiosità</a>
+                </nav>
             </div>
         </header>
 
@@ -41,12 +42,20 @@
             <section class="testo-principale">
                 <h3 class="section-title">L'auto Esperia</h3>
                 <p class="section-text">
-                    L'auto "Esperia" è stata un prodotto importante della Società Automobili Lombarda (S.A.L.),
-                    un'azienda che ha operato a Bergamo nel primo Novecento. La S.A.L. nacque con l’intento di
-                    sviluppare e produrre automobili di qualità, destinate a un mercato che stava rapidamente evolvendo
-                    grazie alla crescente domanda di mezzi di trasporto motorizzati. Nonostante non sia diventata un
-                    grande successo commerciale, l'auto Esperia ha comunque un posto di rilievo nella storia
-                    automobilistica italiana.
+                    L'Esperia non fu solo un’automobile, ma un simbolo dell’ambizione industriale italiana agli inizi
+                    del Novecento. Fondata nel 1905 a Bergamo, la Società Automobili Lombarda (S.A.L.) cercò di
+                    affermarsi nel settore automobilistico con un marchio che puntava su qualità, affidabilità e
+                    innovazione. Nonostante il mercato fosse dominato da case straniere più esperte e le sfide
+                    economiche e tecniche fossero significative, la S.A.L. investì in ricerca e sviluppo, cercando di
+                    anticipare il futuro sviluppo del settore automobilistico italiano. Sebbene l'auto Esperia non
+                    divenne un grande successo commerciale, rappresentò comunque un tentativo di affermare il progresso
+                    industriale italiano e ha un posto di rilievo nella storia automobilistica del Paese.
+                    Anche se la produzione della S.A.L. si interruppe oltre un secolo fa, il nome "Esperia" ha acquisito
+                    un significato più ampio, diventando simbolo di progresso, innovazione e connessione tra tradizione
+                    e modernità. L'eredità di questa automobile si è trasformata in un patrimonio vivo, continuando a
+                    ispirare nuove generazioni e alimentare lo sviluppo tecnologico. Oggi, il nome "Esperia" non è solo
+                    un ricordo del passato, ma un esempio di come l'eccellenza tecnica possa plasmare il futuro,
+                    promuovendo la formazione, la ricerca e l'innovazione.
                 </p>
             </section>
 
@@ -60,7 +69,7 @@
                 <p>La trasmissione dell’auto è uno degli aspetti meccanici più fondamentali che permette al veicolo
                     di muoversi in avanti e indietro.Coinvolgendo diversi organi che hanno lo scopo di trasferire
                     la potenza generata dal motore alle ruote motrici. Questo sistema è ciò che permette al veicolo
-                    di mettersi in movimento e di adattarsi a diverse situazioni stradali. In questo tipo di 
+                    di mettersi in movimento e di adattarsi a diverse situazioni stradali. In questo tipo di
                     sistema, il guidatore è responsabile di selezionare manualmente le marce attraverso il cambio,
                     che regola il rapporto di trasmissione tra il motore e le ruote.</p>
 
