--- a/elementiMacchina.html
+++ b/elementiMacchina.html
@@ -28,7 +28,7 @@
 
         <main>
             <section class="intro">
-                <h1>Titolo Principale</h1>
+                <h1>Componenti della macchina</h1>
                 <p>Questa è la descrizione del titolo principale. Qui puoi aggiungere un testo che spiega di cosa tratta la pagina o qual è il suo scopo.</p>
             </section>
 
