--- a/elementiMotore.html
+++ b/elementiMotore.html
@@ -30,9 +30,11 @@
 
         <main>
             <section class="intro">
-                <h1>Titolo Principale</h1>
-                <p>Questa è la descrizione del titolo principale. Qui puoi aggiungere un testo che spiega di cosa tratta
-                    la pagina o qual è il suo scopo.</p>
+                <h1>Componenti del motore</h1>
+                <p>Questa pagina offre una panoramica sui principali componenti di un motore. Ogni parte ha una
+                    funzione specifica che contribuisce al suo corretto funzionamento, dalla generazione di potenza alla
+                    gestione della combustione. L’obiettivo è fornire una comprensione generale del motore e dei suoi
+                    elementi essenziali.</p>
             </section>
 
             <section class="items-container">
