--- a/elementiMacchina.html
+++ b/elementiMacchina.html
@@ -29,7 +29,9 @@
         <main>
             <section class="intro">
                 <h1>Componenti della macchina</h1>
-                <p>Questa è la descrizione del titolo principale. Qui puoi aggiungere un testo che spiega di cosa tratta la pagina o qual è il suo scopo.</p>
+                <p>Questa pagina descrive i componenti essenziali per il funzionamento dell'autovettura.
+                    Ogni parte contribuisce a garantire efficienza, sicurezza e prestazioni ottimali. L’obiettivo è
+                    fornire una visione generale delle varie componenti e della loro interazione all'interno del sistema auto.</p>
             </section>
 
             <section class="items-container">
