--- a/elementiMotore.html
+++ b/elementiMotore.html
@@ -16,15 +16,14 @@
         <header class="hero">
             <div class="hero-content">
                 <div class="logo">
-                    <a href="./autoEsperia.html">Esperia</a>
+                    <a href="./home.html">Esperia</a>
                 </div>
                 <nav class="menu">
-                    <a class="menu-item" href="./autoEsperia.html">Home</a>
-                    <a class="menu-item" href="./autoEsperia.html">About</a>
-                    <a class="menu-item active" href="./autoEsperia.html">Esperia Cars</a>
-                    <a class="menu-item" href="./autoEsperia.html">Features</a>
-                    <a class="menu-item" href="./autoEsperia.html">Contact</a>
-                </nav>
+                    <a class="menu-item" href="./home.html">Home</a>
+                    <a class="menu-item" href="./storia.html">Storia</a>
+                    <a class="menu-item active" href="./auto_esperia.html">Auto Esperia</a>
+                    <a class="menu-item" href="./curiosità.html">Curiosità</a>
+                                    </nav>
             </div>
         </header>
 
