--- a/curiosità.html
+++ b/curiosità.html
@@ -63,7 +63,7 @@
 
         <main class="content">
             <section class="title-block" aria-labelledby="curiosita-heading">
-                <h1 id="curiosita-heading" style="font-family: 'EB Garamond', serif; color: #000000">Curiosità</h1>
+                <h1 id="curiosita-heading" style="font-family: 'EB Garamond', serif; color:#2D286E">Curiosità</h1>
             </section>
 
             <!-- Sezione Salone dell'Automobile di Parigi -->
@@ -79,7 +79,7 @@
                         <div class="titleblock-2">
                             <h3 style="font-family: 'EB Garamond', serif; color: #23164d" id="salone-parigi-title"><b>Salone dell'Automobile di Parigi</b></h3>
                         </div>
-                        <p style="font-family: Georgia, serif; font-size: 18px; line-height: 1.6; color: #0c0b0b;" id="salone-parigi-desc">
+                        <p style="font-family: Georgia, serif; font-size: 18px; line-height: 1.6; color: #343d90;" id="salone-parigi-desc">
                             Il Salone dell'Automobile di Parigi è uno dei più prestigiosi eventi automobilistici al
                             mondo, con cadenza biennale, che si svolge nella capitale francese, presso il Paris Expo
                             Porte de Versailles. <br> È una delle manifestazioni più importanti del settore automobilistico,
@@ -112,7 +112,7 @@
                         <div class="titleblock-2">
                             <h3 style="font-family: 'EB Garamond', serif; color:#23164d" id="brescia-title"><b>Circuito Di Brescia</b></h3>
                         </div>
-                        <p style="font-family: Georgia, serif; font-size: 18px; line-height: 1.6; color: #0c0b0b;" id="brescia-desc">
+                        <p style="font-family: Georgia, serif; font-size: 18px; line-height: 1.6; color: #343d90;" id="brescia-desc">
                             Il Circuito di Brescia è stato un circuito stradale utilizzato per competizioni motoristiche
                             a Brescia tra il 1899 e il 1925. <br> Nel 1907; il circuito ospitò la seconda edizione della
                             Coppa Florio , una prestigiosa gara automobilistica dell'epoca.
@@ -148,7 +148,7 @@
                         <div class="titleblock-2">
                             <h3 style="font-family: 'EB Garamond', serif; color: #23164d" id="padova-title"><b>Corsa Padova-Bovolenta</b></h3>
                         </div>
-                        <p style="font-family: Georgia, serif; font-size: 18px; line-height: 1.6; color: #0c0b0b;" id="padova-desc">
+                        <p style="font-family: Georgia, serif; font-size: 18px; line-height: 1.6; color: #343d90;" id="padova-desc">
                             Nella storica edizione 1908 della corsa Padova-Bovolenta, l'auto Esperia ha scritto un
                             importante capitolo nella storia delle corse automobilistiche italiane.
 
